--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
         <module>presto-elasticsearch</module>
         <module>presto-sql-function</module>
         <module>presto-expressions</module>
+        <module>presto-localcsv</module>
     </modules>
 
     <dependencyManagement>
